Bejelentkezés funkciók megvalósítás, refaktorálás

--- a/Angular_Frontend/angular.json
+++ b/Angular_Frontend/angular.json
@@ -28,11 +28,12 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "index": "src/index.html",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              
+                "src/assets",
+              "src/favicon.ico"
+              
             ],
             "styles": [
               "src/styles.css"
